# src/main/java/com/classroom/core/model/NotificationType.java
@@ -1,0 +1,6 @@
+package com.classroom.core.model;
+
+public enum NotificationType {
+    PEER_REVIEW,
+    SYSTEM
+}
