# src/main/java/com/classroom/core/model/PeerReviewReviewMode.java
@@ -1,0 +1,6 @@
+package com.classroom.core.model;
+
+public enum PeerReviewReviewMode {
+    ONE_TO_ONE,
+    MANY_TO_ONE
+}
