# src/main/java/com/classroom/core/model/PeerReviewUsageType.java
@@ -1,0 +1,6 @@
+package com.classroom.core.model;
+
+public enum PeerReviewUsageType {
+    CRITERION,
+    SEPARATE_GRADE
+}
